# SwiftType

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/keyboard/: hook.rs  key.rs  mod.rs
src/replacement/: formatter.rs  mod.rs
src/ui/: app_ui.rs  mod.rs  settings_view.rs  snippet_editor.rs  tray.rs
src/utils/: mod.rs
tests/: keyboard_test.rs  replacement_test.rs
